--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lucide-react": "^0.553.0",
     "mongodb": "^5.9.2",
     "mongoose": "^8.19.3",
-    "next": "16.0.2",
+    "next": "^16.0.7",
     "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0",
